reports/latest_report.txt

===== github_monitor.py =====

  File "/home/runner/work/protocol-signal-lab/protocol-signal-lab/scripts/github_monitor.py", line 12
    print("Timestamp:", datetime.utcnow().strftime("%Y-%m-%d %H:%M:%S UTC")
         ^
SyntaxError: '(' was never closed

